# tizen-music-player

./: CMakeLists.txt  org.tizen.music-player.manifest  org.tizen.music-player.rule  org.tizen.music-player.xml
data/: org.tizen.music-player.desktop.in
include/: mp-common-defs.h  mp-images.h  mp-vconf-private-keys.h
layout/: mp-button.edc  mp-custom-winset-style.edc  mp-defines.h  mp-edit-navi.edc  mp-editfield.edc  mp-gengrid-style.edc  mp-genlist-edit.edc  mp-genlist-sweep.edc  mp-genlist-theme.edc  mp-images.edc  mp-library.edc  mp-lrc.edc  mp-minicontroller.edc  mp-naviframe.edc  mp-no-contents.edc  mp-play-control.edc  mp-play-current-playing.edc  mp-play-info.edc  mp-play-menu.edc  mp-play-mini-app.edc  mp-play-option.edc  mp-play-progress.edc  mp-play-vew-landscape.edc  mp-play-view.edc  mp-progressbar.edc  mp-rich-info.edc  mp-selection-info.edc  mp-slider.edc  mp-square-view.edc  mp-toolbar.edc  mp_genlist_define.edc  mp_genlist_macro.edc  music.edc  tizen-hd-inc.edc
layout/genlist/: genlist.edc  genlist_macro.edc  genlist_normal.edc
packaging/: org.tizen.music-player.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  et.po  eu.po  fi.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+12 more)
sound-player/: CMakeLists.txt
sound-player/src/: sp-view-manager.c
sound-player/src/include/: sp-view-manager.h
src/: mp-main.c
src/common/: mp-app.c  mp-common.c  mp-item.c  mp-media-info.c  mp-menu.c  mp-play.c  mp-ta.c  mp-ug-launch.c  mp-util.c  mp-view-manager.c  mp-widget.c
src/common/include/: mp-app.h  mp-common.h  mp-item.h  mp-media-info.h  mp-menu.h  mp-play.h  mp-ta.h  mp-ug-launch.h  mp-util.h  mp-view-manager.h  mp-widget.h
src/core/: mp-avrcp.c  mp-file-tag-info.c  mp-http-mgr.c  mp-language-mgr.c  mp-lyric-mgr.c  mp-player-control.c  mp-player-drm.c  mp-player-mgr.c  mp-playlist-mgr.c  mp-setting-ctrl.c  mp-streaming-mgr.c  mp-volume.c
src/core/include/: mp-avrcp.h  mp-file-tag-info.h  mp-http-mgr.h  mp-language-mgr.h  mp-lyric-mgr.h  mp-player-control.h  mp-player-drm.h  mp-player-mgr.h  mp-playlist-mgr.h  mp-setting-ctrl.h  mp-streaming-mgr.h  mp-volume.h
src/include/: mp-define.h  mp-player-debug.h  music.h
src/view/: mp-edit-view.c  mp-group-view.c  mp-library.c  mp-lyric-view.c  mp-play-view.c  mp-playlist-view.c  mp-track-view.c
src/view/include/: mp-edit-view.h  mp-group-view.h  mp-library.h  mp-lyric-view.h  mp-play-view.h  mp-playlist-view.h  mp-track-view.h
src/widget/: mp-ctxpopup.c  mp-minicontroller.c  mp-popup.c  mp-search.c  mp-smart-event-box.c  mp-view-layout.c  mp-volume-widget.c
src/widget/include/: mp-ctxpopup.h  mp-minicontroller.h  mp-notification.h  mp-popup.h  mp-search.h  mp-smart-event-box.h  mp-view-layout.h  mp-volume-widget.h
ug-music-player-efl/: CMakeLists.txt  ug-music-player-efl.xml
ug-music-player-efl/layout/: ug-music-player-efl.edc
ug-music-player-efl/src/: ug-mp-common.c  ug-mp-efl.c  ug-mp-group-list.c  ug-mp-library-view.c  ug-mp-track-list.c  ug-mp-widget.c
ug-music-player-efl/src/include/: ug-mp-common.h  ug-mp-data.h  ug-mp-debug.h  ug-mp-efl.h  ug-mp-group-list.h  ug-mp-library-view.h  ug-mp-text.h  ug-mp-track-list.h  ug-mp-widget.h
